[gd_scene load_steps=8 format=2]

[ext_resource path="res://Materiais/Fonte/OpenSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Materiais/BackGround/neymar-menu.jpg" type="Texture" id=2]
[ext_resource path="res://Scripts/Login.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 13
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 10
outline_color = Color( 0.996078, 0.996078, 0.996078, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 13
outline_color = Color( 0.992157, 0.992157, 0.992157, 1 )
font_data = ExtResource( 1 )

[node name="Login" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 177.115, 99.3143 )
scale = Vector2( 0.189655, 0.189655 )
texture = ExtResource( 2 )

[node name="NeyGame" type="RichTextLabel" parent="."]
margin_left = 48.2838
margin_top = 33.2499
margin_right = 118.284
margin_bottom = 54.2499
custom_fonts/normal_font = SubResource( 1 )
text = "NeyGame"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 19.6364
margin_top = 60.6818
margin_right = 137.636
margin_bottom = 179.682
color = Color( 0.254902, 0.231373, 0.231373, 0.329412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Email" type="RichTextLabel" parent="ColorRect"]
margin_left = 44.2001
margin_top = 2.01016
margin_right = 75.2001
margin_bottom = 17.0102
custom_fonts/normal_font = SubResource( 2 )
text = "Email:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Senha" type="RichTextLabel" parent="ColorRect"]
margin_left = 41.9526
margin_top = 41.0102
margin_right = 75.9526
margin_bottom = 57.0102
custom_fonts/normal_font = SubResource( 3 )
text = "Senha:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line_Email" type="LineEdit" parent="ColorRect"]
margin_left = 6.12372
margin_top = 17.1339
margin_right = 113.124
margin_bottom = 41.1339
text = "joao@gmail.com"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line_Senha" type="LineEdit" parent="ColorRect"]
margin_left = 8.12373
margin_top = 56.6288
margin_right = 113.124
margin_bottom = 80.6288
text = "123"
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ColorRect"]
margin_left = 35.2509
margin_top = 85.7559
margin_right = 88.2509
margin_bottom = 109.756
custom_fonts/font = SubResource( 4 )
text = "Entrar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
